<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/bg"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/x50"
        android:paddingEnd="@dimen/x50">

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/x30"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cooperation_1"
                android:textColor="@color/gray_666666"
                android:textSize="@dimen/x32" />

            <TextView
                android:layout_marginStart="@dimen/x10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@android:color/black"
                android:textSize="@dimen/x32" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x30"
            android:text="@string/cooperation_2"
            android:textColor="@color/gray_666666"
            android:textSize="@dimen/x28" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x40"
            android:layout_marginBottom="@dimen/x40">

            <TextView
                android:id="@+id/act_cooperation_type_tv1"
                android:layout_width="@dimen/x150"
                android:layout_height="@dimen/x60"
                android:background="@drawable/bg_cooperation_ffffff_r60px"
                android:gravity="center"
                android:text="@string/cooperation_3"
                android:textColor="#5f5f5f"
                android:textSize="@dimen/x26" />

            <TextView
                android:id="@+id/act_cooperation_type_tv2"
                android:layout_width="@dimen/x150"
                android:layout_height="@dimen/x60"
                android:layout_centerInParent="true"
                android:background="@drawable/bg_cooperation_ffffff_r60px"
                android:gravity="center"
                android:text="@string/cooperation_4"
                android:textColor="#5f5f5f"
                android:textSize="@dimen/x26" />

            <TextView
                android:id="@+id/act_cooperation_type_tv3"
                android:layout_width="@dimen/x150"
                android:layout_height="@dimen/x60"
                android:layout_alignParentEnd="true"
                android:background="@drawable/bg_cooperation_ffffff_r60px"
                android:gravity="center"
                android:text="@string/cooperation_5"
                android:textColor="#5f5f5f"
                android:textSize="@dimen/x26" />
        </RelativeLayout>

        <EditText
            android:id="@+id/act_cooperation_business_name_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x90"
            android:background="@drawable/bg_ffffff_r20px"
            android:hint="@string/cooperation_6"
            android:paddingStart="@dimen/x30"
            android:paddingEnd="@dimen/x30"
            android:textColor="@android:color/black"
            android:textSize="@dimen/x28" />

        <EditText
            android:id="@+id/act_cooperation_name_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x90"
            android:layout_marginTop="@dimen/x40"
            android:background="@drawable/bg_ffffff_r20px"
            android:hint="@string/cooperation_7"
            android:paddingStart="@dimen/x30"
            android:paddingEnd="@dimen/x30"
            android:textColor="@android:color/black"
            android:textSize="@dimen/x28" />

        <EditText
            android:id="@+id/act_cooperation_phone_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x90"
            android:layout_marginTop="@dimen/x40"
            android:background="@drawable/bg_ffffff_r20px"
            android:hint="@string/cooperation_8"
            android:inputType="phone"
            android:paddingStart="@dimen/x30"
            android:paddingEnd="@dimen/x30"
            android:textColor="@android:color/black"
            android:textSize="@dimen/x28" />

        <EditText
            android:id="@+id/act_cooperation_email_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x90"
            android:layout_marginTop="@dimen/x40"
            android:background="@drawable/bg_ffffff_r20px"
            android:hint="@string/cooperation_10"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/x30"
            android:paddingEnd="@dimen/x30"
            android:textColor="@android:color/black"
            android:textSize="@dimen/x28" />

        <EditText
            android:id="@+id/act_cooperation_remark_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x300"
            android:layout_marginTop="@dimen/x40"
            android:background="@drawable/bg_f2f2f2_r20px"
            android:gravity="start"
            android:hint="@string/cooperation_11"
            android:inputType="textEmailAddress"
            android:padding="@dimen/x30"
            android:textColor="@android:color/black"
            android:textSize="@dimen/x28"
            android:visibility="gone" />


        <Button
            android:id="@+id/act_cooperation_submit_btn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/x70"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/x50"
            android:layout_marginBottom="@dimen/x30"
            android:background="@mipmap/pic_enter_btn_bg"
            android:paddingStart="@dimen/x30"
            android:paddingEnd="@dimen/x30"
            android:text="@string/cooperation_9"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="@dimen/x28" />
    </LinearLayout>
</ScrollView>