<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/act_borrow_result_iv"
            android:layout_width="@dimen/x250"
            android:layout_height="@dimen/x250"
            android:layout_marginTop="@dimen/x30"
            android:scaleType="fitXY"
            android:src="@mipmap/pic_borrow_success1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x50"
            android:text="@string/borrow_16"
            android:textColor="@android:color/black"
            android:textSize="@dimen/x40" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x20"
            android:gravity="center"
            android:text="@string/borrow_17"
            android:textColor="@color/gray_666666"
            android:textSize="@dimen/x28" />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/x32"
            android:layout_marginTop="@dimen/x70"
            android:text="@string/borrow_19"
            android:textColor="@color/black"
            android:textSize="@dimen/x34"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/x48"
            android:layout_marginTop="@dimen/x20"
            android:layout_marginEnd="@dimen/x48"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/borrow_20"
                android:textColor="@color/black"
                android:textSize="@dimen/x28" />

            <TextView
                android:id="@+id/act_borrow_success_hour_cost_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/borrow_24"
                android:textColor="@color/black"
                android:textSize="@dimen/x24" />
        </LinearLayout>

        <TextView
            android:id="@+id/act_borrow_success_des_tv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/x48"
            android:layout_marginTop="@dimen/x10"
            android:layout_marginEnd="@dimen/x48"
            android:text="@string/borrow_22"
            android:textSize="@dimen/x24"
            android:visibility="gone" />

        <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginStart="@dimen/x33"-->
        <!--android:layout_marginTop="@dimen/x30"-->
        <!--android:text="@string/borrow_21"-->
        <!--android:textColor="@color/black"-->
        <!--android:textSize="@dimen/x28" />-->

        <!--<TextView-->
        <!--android:id="@+id/act_borrow_success_des_tv2"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginStart="@dimen/x48"-->
        <!--android:layout_marginTop="@dimen/x10"-->
        <!--android:layout_marginEnd="@dimen/x48"-->
        <!--android:text="@string/borrow_23"-->
        <!--android:textSize="@dimen/x24" />-->
        <LinearLayout
            android:id="@+id/act_device_detail_content_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/act_device_detail_iv"
            android:layout_marginStart="@dimen/x40"
            android:layout_marginTop="@dimen/x20"
            android:layout_marginEnd="@dimen/x40"
            android:background="@drawable/bg_round_c"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/x72"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/borrow_2"
                android:textColor="@android:color/black"
                android:textSize="@dimen/x28" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/x2"
                android:layout_marginStart="@dimen/x10"
                android:layout_marginEnd="@dimen/x10"
                android:background="@color/line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/act_device_detail_fee_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/x72"
                    android:gravity="center"
                    android:text="@string/borrow_3"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/x28" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/x72"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="@dimen/x6"
                    android:gravity="center"
                    android:text="@string/borrow_4"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="@dimen/x28" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/x2"
                android:layout_marginStart="@dimen/x10"
                android:layout_marginEnd="@dimen/x10"
                android:background="@color/line" />


            <TextView
                android:id="@+id/act_device_detail_rentCost_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:paddingTop="@dimen/x16"
                android:text="@string/borrow_5"
                android:textColor="@android:color/black"
                android:textSize="@dimen/x28" />

            <TextView
                android:id="@+id/act_device_detail_highCost_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/x4"
                android:gravity="center"
                android:paddingBottom="@dimen/x16"
                android:text="@string/borrow_10"
                android:textColor="@color/gray_666666"
                android:textSize="@dimen/x24" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/x2"
                android:layout_marginStart="@dimen/x10"
                android:layout_marginEnd="@dimen/x10"
                android:background="@color/line" />


            <TextView
                android:id="@+id/act_device_detail_highCost_day_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:paddingTop="@dimen/x16"
                android:text="@string/borrow_6"
                android:textColor="@android:color/black"
                android:textSize="@dimen/x28" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/x4"
                android:gravity="center"
                android:paddingBottom="@dimen/x16"
                android:text="@string/borrow_11"
                android:textColor="@color/gray_666666"
                android:textSize="@dimen/x24" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/x2"
                android:layout_marginStart="@dimen/x10"
                android:layout_marginEnd="@dimen/x10"
                android:background="@color/line" />


            <TextView
                android:id="@+id/act_device_detail_more_than_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:paddingTop="@dimen/x16"
                android:text="@string/borrow_7"
                android:textColor="@android:color/black"
                android:textSize="@dimen/x28" />

            <TextView
                android:id="@+id/act_device_detail_more_than_des_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/x10"
                android:layout_marginTop="@dimen/x4"
                android:layout_marginEnd="@dimen/x10"
                android:gravity="center"
                android:paddingBottom="@dimen/x16"
                android:text="@string/borrow_8"
                android:textColor="@color/gray_666666"
                android:textSize="@dimen/x24" />
        </LinearLayout>
        <TextView
            android:id="@+id/act_borrow_result_help_tv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x90"
            android:layout_marginStart="@dimen/x40"
            android:layout_marginTop="@dimen/x40"
            android:layout_marginEnd="@dimen/x40"
            android:background="@android:color/white"
            android:gravity="center"
            android:text="@string/borrow_18"
            android:textColor="@color/gray_666666"
            android:textSize="@dimen/x30" />
    </LinearLayout>
</ScrollView>
